tools/biome/plugins/api-architecture/fixtures/no-dto-inter-module-import/rejected/libs/api/example-dto/tests/rejected.ts
import * as clients from '@shipfox/a-dto/inter-module/namespace';

void clients;
